--- a/Coursera_Capstone.ipynb
+++ b/Coursera_Capstone.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Coursera_Capstone",
       "provenance": [],
-      "authorship_tag": "ABX9TyO9oxZqeesa86e8hzKLy09X"
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPahmioTP+xmzl1onhBEJrg"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +18,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SGpiFfRGeIiJ"
+      },
+      "source": [
+        "This notebook will be used by me for the data science capstone project\n",
+        "I will import 2 python libraries and print a statement first."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "TjoMejwNwkJO"
@@ -25,7 +36,7 @@
         "import pandas as pd  #importing pandas\n",
         "import numpy as np   #importing numpy"
       ],
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -35,12 +46,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NbM2QhqKws_q",
-        "outputId": "9867b0f5-8674-4e96-f163-768a97d97624"
+        "outputId": "a76deddf-f164-48d5-f52c-fb097b89b49a"
       },
       "source": [
         "print(\" Hello Capstone Project Course!\")  #printing statement"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -50,17 +61,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HyEk512yw7L-"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
